--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,9 @@ hr
 
 }
 
+
+
+/* about.html style */
 p
 {
 	line-height: 2;
@@ -85,6 +88,43 @@ p
 	color: #777777;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }
+
+/* portfolio.html style */
+
+
+.text 
+{
+	position: relative;
+	bottom: 50px;
+	background-color: #4aaaa5;
+	color: white;
+	padding-top: 3%;
+	padding-bottom: 12%;
+	font-family: 'Georgia', Times, Times New Roman, serif;
+	font-size: 1.6vw;
+	text-align: center;
+	height: 15%;
+}
+
+
+/* contact.html style */
+
+label, input
+{
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+	color: #777777;
+
+}
+
+.submit
+{
+	background-color: #4aaaa5;
+	color: white;
+	font-size: 16px;
+	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
+
+}
+
 
 /* footer */
 
@@ -108,6 +148,15 @@ footer
 }
 
 /* responsive settings */
+
+@media (max-width: 960px) 
+{
+	.project
+	{
+		margin-left: 5%;
+
+	}
+}
 
 @media (max-width: 576px) 
 {
@@ -151,6 +200,16 @@ footer
     {	
     	text-align: center;
     	width: 100%;
+    }
+
+    .project
+    {
+    	margin: 0 auto;
+    }
+
+    .project .text
+    {
+    	font-size: 16px;
     }
 
 }
